array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  n= num.size
  
}